<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:id="@+id/myRelLay"
	android:background="#4CAF50">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentStart="true"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/textView2"
				android:layout_width="140dp"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/istanbul" />

			<TextView
				android:id="@+id/textView3"
				android:layout_width="140dp"
				android:layout_height="57dp"
				android:gravity="center"
				android:text="@string/tarih" />

			<TextView
				android:id="@+id/textView4"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:gravity="center"
				android:text="@string/saat" />

		</LinearLayout>

		<com.camera.simplemjpeg.MjpegView
			android:id="@+id/mv"
			android:layout_width="match_parent"
			android:layout_height="1dp" />

		<!--
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:orientation="horizontal">

			<org.opencv.android.JavaCameraView
				android:id="@+id/myCameraView"
				android:layout_width="200dp"
				android:layout_height="200dp"
				app:show_fps="true" />

			<com.camera.simplemjpeg.FaceOverlayView
				android:id="@+id/face_overlay"
				android:layout_width="match_parent"
				android:layout_height="200dp" />

		</LinearLayout>
		-->


		<com.camera.simplemjpeg.FaceOverlayView
			android:id="@+id/face_overlay"
			android:layout_width="match_parent"
			android:layout_height="200dp" />


		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="120dp"
			android:gravity="center"
			android:text="@string/hos_geldiniz"
			android:textAlignment="center"
			android:textSize="30sp"
			android:textStyle="bold" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal">

			<TableLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="105dp">

					<ImageView
						android:id="@+id/imageView2"
						android:layout_width="wrap_content"
						android:layout_height="fill_parent"
						android:layout_column="1"
						android:src="@drawable/walking" />

					<TextView
						android:id="@+id/TextNumber1"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="2"
						android:paddingLeft="30dp"
						android:paddingTop="30dp"
						android:text=""
						android:textAlignment="center"
						android:textSize="30sp" />

					<TextView
						android:id="@+id/TextNumber2"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="3"
						android:paddingLeft="30dp"
						android:paddingTop="30dp"
						android:text=""
						android:textAlignment="center"
						android:textSize="30sp" />

					<TextView
						android:id="@+id/TextNumber3"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="4"
						android:paddingLeft="30dp"
						android:paddingTop="30dp"
						android:text=""
						android:textAlignment="center"
						android:textSize="30sp" />
				</TableRow>

				<TableRow
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<TextView
						android:id="@+id/textView8"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="1"
						android:paddingStart="10dp"
						android:paddingTop="10dp"
						android:paddingEnd="10dp"
						android:text="               "
						android:textAlignment="center" />

					<TextView
						android:id="@+id/textView5"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="2"
						android:paddingLeft="10dp"
						android:paddingTop="10dp"
						android:paddingEnd="10dp"
						android:text="@string/Kapasite" />

					<TextView
						android:id="@+id/textView6"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="3"
						android:paddingLeft="10dp"
						android:paddingTop="10dp"
						android:paddingEnd="10dp"
						android:text="@string/Mevcut" />

					<TextView
						android:id="@+id/textView7"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_column="4"
						android:paddingLeft="10dp"
						android:paddingTop="10dp"
						android:paddingEnd="10dp"
						android:text="@string/girebilir" />

				</TableRow>

			</TableLayout>

		</LinearLayout>

		<org.opencv.android.JavaCameraView
			android:id="@+id/myCameraView"
			android:layout_width="200dp"
			android:layout_height="200dp"
			app:show_fps="true" />

	</LinearLayout>


</RelativeLayout>